--- a/templates/create_card.html
+++ b/templates/create_card.html
@@ -22,12 +22,13 @@
         <form action="{{ url_for('form_create') }}" method="post" class="creat-form">
             <div class="form__card">
                 <img class="card__img" src="../static/img/post_icon.png" width="250" height="250" alt="post_icon">
+                <p class="error">{{error}}</p>
                 <div class="form__inputs">
                     <label for="title">
-                        <input class="form__input" type="text" name="title" id="title" placeholder="Wpisz tytuł wpisu" required>
+                        <input class="form__input" type="text" name="title" id="title" placeholder="Wpisz tytuł wpisu" value="{{title}}" required>
                     </label>
                     <label for="subtitle">
-                        <input class="form__input" type="text" name="subtitle" id="subtitle" placeholder="Wpisz tytuł dodatkowy" required>
+                        <input class="form__input" type="text" name="subtitle" id="subtitle" placeholder="Wpisz tytuł dodatkowy" value="{{subtitle}}" required>
                     </label>
                 </div>
                 <label for="text">
